solved testimonial overflow y

--- a/src/App.css
+++ b/src/App.css
@@ -339,6 +339,7 @@ button:active a {
   width: 100%;
   height: 100%;
   overflow-x: scroll;
+  overflow-y: hidden;
   white-space: nowrap;
   scroll-behavior: smooth;
   margin: 0 1rem;
